Tue Jan 27 10:15:59 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* examples/Hello/step-by-step.html:

	Some format and trivial fix.

Mon Jan 26 20:33:31 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* examples/Hello/step-by-step.html:

	Updated this file with new font.

Fri Jan 23 10:36:27 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/CCF.sln:
	* CCF/CCF/CIDL/CIDL.vcproj:
	* CCF/CCF/CodeGenerationKit/CodeGenerationKit.vcproj:
	* CCF/CCF/CompilerElements/CompilerElements.vcproj:
	* CCF/CCF/IDL2/IDL2.vcproj:
	* CCF/CCF/IDL3/IDL3.vcproj:

	  Updated projects to compile with boost out-of-the-box.

	* CCF/Documentation/Build.html:

	  Added step-by-step instructions for building CCF on
	  Windows. Thanks to Tao Lu for helping me with this.

Thu Jan 22 23:38:32 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* examples/OEP/Display/descriptors/DualDisplay.cad:

	  Changed the name of the file.

Wed Jan 21 11:16:31 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/IDL2/Parsing/Recovery.hpp:
	* CCF/CCF/IDL2/Traversal/ValueType.tpp:
	* CCF/CCF/IDL3/Traversal/EventType.tpp:
	* CIDLC/ExecutorMappingGenerator.cpp:
	* CIDLC/ServantHeaderGenerator.cpp:
	* CIDLC/ServantSourceGenerator.cpp:

	  Cosmetic changes.

Wed Jan 21 10:17:22 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Makefile:
	* CCF/CCF/Makefile:
	* CCF/CCF/CIDL/Makefile:
	* CCF/CCF/CIDL/Makefile.alt:
	* CCF/CCF/CIDL/Makefile.archive:
	* CCF/CCF/CIDL/Makefile.archive.alt:
	* CCF/CCF/CIDL/SemanticAction/Makefile:
	* CCF/CCF/CIDL/SemanticAction/Makefile.alt:
	* CCF/CCF/CIDL/SemanticAction/Makefile.object:
	* CCF/CCF/CIDL/SemanticAction/Makefile.object.alt:
	* CCF/CCF/CIDL/SemanticAction/Impl/Makefile:
	* CCF/CCF/CIDL/SemanticGraph/Makefile:
	* CCF/CCF/CIDL/Traversal/Makefile:
	* CCF/CCF/CodeGenerationKit/Makefile:
	* CCF/CCF/CompilerElements/Makefile:
	* CCF/CCF/IDL2/Makefile:
	* CCF/CCF/IDL2/Makefile.alt:
	* CCF/CCF/IDL2/Makefile.archive:
	* CCF/CCF/IDL2/Makefile.archive.alt: