@@ -1,3 +1,12 @@
+Tue Jan 27 11:33:39 2004  Tao Lu  <lu@dre.vanderbilt.edu>
+
+	* examples/Hello/Sender/Sender_exec.h:
+	* examples/Hello/Sender/Sender_exec.cpp:
+	* examples/Hello/Sender/Sender.idl:
+	* examples/Hello/Sender/starter.cpp:
+
+	Updated these files.
+
 Tue Jan 27 10:15:59 2004  Tao Lu  <lu@dre.vanderbilt.edu>
 
 	* examples/Hello/step-by-step.html:
